# interactive-audio-visualizer

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  go_session.sh  instructions.md  main  main.cpp  mainLedFrequency.cpp  quick_test.sh  runnable  start.sh  stop.sh  todos  uml.drawio
.github/workflows/: ci-workflow.yml  github-actions-demo.yml
audio/: routing.cpp  start_jackd.sh
data/: .gitignore  settings.db
docs/: Doxyfile  readme.md
docs/docbook/: annotated.xml  audio_8h.xml  audiolizer_8h.xml  beatracker_8h.xml  camera_8h.xml  classVisualizer.xml  classWaveform.xml  config_8h__dep__incl.md5  console_8h.xml  main_8cpp.xml  main_8cpp__incl.md5  raw_8h.xml  raw_8h__dep__incl.md5  signal_8h__dep__incl.md5  signal_8h__incl.md5  videotracker_8cpp.xml  videotracker_8h.xml  visualizer_8h.xml  visualizer_8h__incl.md5
docs/documentation/docbook/: beatracker_8h__incl.md5  classAudioStream.xml  classAudiolizer.xml  classBeatracker.xml  classCamera.xml  classInputParser.xml  classSignal.xml  classSpectrogram.xml  classVideoTracker.xml  classVisualizer.xml  config_8h.xml  config_8h__incl.md5  console_8cpp.xml  console_8h__dep__incl.md5  console_8h__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  fft_8h.xml  index.xml  main_8cpp.xml  roi_8cpp.xml  roi_8cpp__dep__incl.md5  signal_8h.xml  structConfig.xml  structRegionOfInterest.xml  videotracker_8h__incl.md5
docs/documentation/html/: annotated.html  audio_8h.html  audio_8h__dep__incl.map  audio_8h_source.html  audiolizer_8h__incl.md5  audiolizer_8h_source.html  beatracker_8h.html  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  classAudioStream-members.html  classAudioStream.html  classBeatracker.html  classInputParser-members.html  classSignal-members.html  classSpectrogram-members.html  classSpectrogram.html  classVideoTracker-members.html  classVisualizer-members.html  classVisualizer.html  classWaveform-members.html  classWaveform.html  config_8h.html  config_8h__dep__incl.map  config_8h__incl.map  (+31 more)
docs/html/: audio_8h.html  audio_8h__dep__incl.md5  audio_8h__incl.map  audio_8h__incl.md5  audiolizer_8h.html  audiolizer_8h__dep__incl.map  audiolizer_8h__dep__incl.md5  audiolizer_8h__incl.map  beatracker_8h__incl.map  beatracker_8h_source.html  camera_8h_source.html  classAudiolizer-members.html  classAudiolizer.html  classBeatracker-members.html  classCamera-members.html  classCamera.html  classInputParser.html  classSignal.html  classVideoTracker.html  classVisualizer.html  classes.html  config_8h_source.html  console_8cpp__incl.map  console_8cpp_source.html  console_8h__incl.map  console_8h_source.html  fft_8h.html  fft_8h__dep__incl.map  fft_8h__dep__incl.md5  fft_8h__incl.map  fft_8h__incl.md5  fft_8h_source.html  files.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  main_8cpp.html  main_8cpp_source.html  raw_8h.html  (+13 more)
docs/latex/: annotated.tex  audio_8h.tex  audiolizer_8h.tex  audiolizer_8h__dep__incl.md5  beatracker_8h.tex  camera_8h.tex  camera_8h__dep__incl.md5  classAudioStream.tex  classSignal.tex  classSpectrogram.tex  classVideoTracker.tex  classVisualizer.tex  config_8h.tex  console_8cpp.tex  console_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  fft_8h.tex  fft_8h__dep__incl.md5  main_8cpp.tex  raw_8h.tex  raw_8h__dep__incl.md5  raw_8h__incl.md5  refman.tex  roi_8cpp.tex  signal_8h.tex  signal_8h__dep__incl.md5  signal_8h__incl.md5  structConfig.tex  structRegionOfInterest.tex  videotracker_8cpp.tex  videotracker_8h.tex  videotracker_8h__incl.md5  visualizer_8h.tex
example_build_hello/: CMakeLists.txt  Makefile  README.md  README.md.save.1  main.cpp  run
files/: todos
files/design/: uml.drawio
files/docs/: Doxyfile
files/documentation/: Doxyfile  readme.md
files/scripts/: compileTests.sh  cpumem.sh  dockerRun  genStaticAnalysisLogs.sh  welcome
include/: audio.h  audiolizer.h  audioserver.h  bar.h  beatracker.h  camera.h  config.h  config_defaults.h  config_types.h  console.h  foo.h  gui.h  iav.h  paths.h  raw.h  roi.h  settings.h  signal.h  sine.h  spectrogram.h  tempsignal.h  timer.h  tone.h  trigger.h  unused_defines.h  videotracker.h  visualizer.h  waveform.h
include/gui/: audiohw.h  camerahw.h  opencvfps.h  screenhw.h
scripts/: compile.sh  compileTests.sh  docker.sh  dockerBuild  dockerRun  genStaticAnalysisLogs.sh  static_analysis.sh
src/: Makefile_debug  __audiolizer.cpp  __audiolizer.h  __tracking.cpp  __tracking.h  audio.cpp  audio.h  audiolizer.cpp  audiolizer.h  audioserver.cpp  bar.cpp  beatracker.cpp  beatracker.h  camera.cpp  camera.h  config.cpp  config.h  config_defaults.cpp  console.cpp  console.h  fft copy.cpp  fft.cpp  fft.h  foo.cpp  gui.cpp  iav.cpp  main.cpp  process.h  raw copy.h  raw.cpp  raw.h  realocf.cpp  roi.cpp  settings.cpp  signal.cpp  signal.h  simple_client.cpp  simple_client2.cpp  sine.cpp  spectrogram.cpp  (+13 more)
src/gui/: audiohw.cpp  camerahw.cpp  opencvfps.cpp  screenhw.cpp
temp/: Makefile  run  timer.cpp
temp/division/: division.cpp  run
test/: CMakeLists.txt  allTests.cpp  audiolizerTest.cpp  barTest.cpp  configTest.cpp  fooTest.cpp  settingsTest.cpp  sineTest.cpp  spectrogramTest.cpp  test_all  timerTest.cpp  triggerTest.cpp  waveformTest.cpp
visinter/: Makefile  video.cpp
visualizer/: Makefile
visualizer/visualizer/: fft.cpp
(+790 files in other folders)
